The 'target' property of event. Event handler params. Event propagation. Example 2-3 Events in Vue.js. Lesson 3 Vue.js form binding.

--- a/e2/s3/02_event_target.html
+++ b/e2/s3/02_event_target.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Обработчик события</title>
+  <title>Свойство «target» события</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <link href="../bootstrap-4.4.1-dist/css/bootstrap.min.css" rel="stylesheet" />
   <script src="../vue.js"></script>
@@ -14,9 +14,9 @@
         },
         //Объект экземпляра Vue.js, содержащий функции, описывающие поведение (как отклик на возбуждаемое событие)
         methods: {
-          onSearch: function() {
+          onSearch: function(e) {
             //Используем ключевое слово ссылки на контекст this
-            alert('Вы искали: "' + this.search + '"')
+            alert('Запрос: "' + this.search + '"; Кнопка: "' + e.target.innerText + '"')
           }
         }
       })
@@ -25,16 +25,11 @@
 </head>
 <body>
   <div class="container">
-    <p>Простой пример, показывающий привязку к событию</p>
+    <p>Простой пример, показывающий задание обработчика события</p>
     <div id="app">
       <form class="form-horizontal">
         <div class="form-group">
           <div class="input-group">
-            <!-- При использовании JS нужно было бы написать:
-            <button onclick="onSearch" type="button" class="btn btn-primary">Поиск</button>
-            v-on - директива используется для привязки обработчика события.
-              После «:» (двоеточия) нужно указать событие, к которому будет привязан обработчик.
-              «onSearch» - имя свойства объекта methods экземпляра Vue.js, в котором определена привязываемая функция-обработчик. -->
             <input v-model="search" type="search" class="form-control" placeholder="Ищем..." />
             <button v-on:click="onSearch" type="button" class="btn btn-primary">Поиск</button>
           </div>
