--- a/e2/s3/07_stop_modifier.html
+++ b/e2/s3/07_stop_modifier.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Распространение события («стадия всплытия»)</title>
+  <title>Модификатор остановки всплытия (распространения)</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <link href="../bootstrap-4.4.1-dist/css/bootstrap.min.css" rel="stylesheet" />
   <script src="../vue.js"></script>
@@ -37,10 +37,14 @@
 </head>
 <body>
   <div class="container">
+    <br />
     <div id="app">
       <form class="form-horizontal">
-        <p>Пример, показывающий распространение события <code>click</code></p>
-        <div v-on:click="grandparentClick">
+        <p>Пример, показывающий распространение события <code>click</code> с использованием стадии перехвата <code>capture</code></p>
+        <!-- Добавление модификатора capture для элемента-предка второго уровня -->
+        <div v-on:click.capture="grandparentClick">
+          <!-- Добавление модификатора capture для элемента-предка -->
+          <!-- <div class="input-group" v-on:click.capture="parentClick"> -->
           <div class="input-group" v-on:click="parentClick">
             <input v-model="search" type="text" class="form-control" placeholder="Ищем..." />
             <button v-on:click="executeSearch" type="button" class="btn btn-primary">Поиск</button>
@@ -49,7 +53,7 @@
         <br />
         <div class="form-group">
           <label for="logTextarea">Журнал событий</label>
-          <textarea class="form-control" v-model="history" rows="15"></textarea>
+          <textarea class="form-control" v-model="history" rows="20"></textarea>
         </div>
       </form>
     </div>
