--- a/e2/s3/09_once_modifier.html
+++ b/e2/s3/09_once_modifier.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Модификатор остановки всплытия (распространения)</title>
+  <title>Модификатор once, который добавляется в случае, если необходимо запустить событие только один раз</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <link href="../bootstrap-4.4.1-dist/css/bootstrap.min.css" rel="stylesheet" />
   <script src="../vue.js"></script>
@@ -11,12 +11,15 @@
         el: '#app', //Привязка через CSS-селектор
         data: {
           search: '',
+          isRunning: false,
           history: ''
         },
         //Объект экземпляра Vue.js, содержащий функции, описывающие поведение (как отклик на возбуждаемое событие)
         methods: {
           executeSearch: function() {
-            this.history += 'Нажатие кнопки "Поиск". Запрос "' + this.search + '".\n'
+            this.isRunning = true
+            this.history += 'Нажатие кнопки "Поиск". Запрос на поиск: "' + this.search + '".\n'
+            //document.forms[0].submit()
           },
           parentClick: function() {
             this.history += 'Нажатие элемента - непосредственного предка кнопки "Поиск".\n'
@@ -40,20 +43,17 @@
     <br />
     <div id="app">
       <form class="form-horizontal">
-        <p>Пример, показывающий действие модификатора <code>stop</code>.</p>
+        <p>Пример, показывающий действие модификатора <code>once</code>, который добавляется в случае, если необходимо запустить событие только один раз.</p>
         <div v-on:click="grandparentClick">
-          <!-- Добавление модификатора stop для элемента-предка -->
-          <!-- <div class="input-group" v-on:click.stop="parentClick"> -->
           <div class="input-group" v-on:click="parentClick">
-            <input v-model="search" type="text" class="form-control" />
-            <!-- Аналог метода stopPropagation в JS -->
-            <button v-on:click.stop="executeSearch" type="button" class="btn btn-primary">Поиск</button>
+            <input v-model="search" v-bind:disabled="isRunning" type="search" class="form-control" autofocus />
+            <button v-on:click.once="executeSearch" v-bind:disabled="isRunning" type="button" class="btn btn-primary">Поиск</button>
           </div>
         </div>
         <br />
         <div class="form-group">
           <label for="logTextarea">Журнал событий</label>
-          <textarea class="form-control" v-model="history" rows="20"></textarea>
+          <textarea class="form-control" v-model="history" rows="15"></textarea>
         </div>
       </form>
     </div>
