--- a/e2/s3/11_all_modifiers.html
+++ b/e2/s3/11_all_modifiers.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Модификатор остановки всплытия (распространения)</title>
+  <title>Пример использования различных модификаторов</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <link href="../bootstrap-4.4.1-dist/css/bootstrap.min.css" rel="stylesheet" />
   <script src="../vue.js"></script>
@@ -10,26 +10,28 @@
       const sample = new Vue({
         el: '#app', //Привязка через CSS-селектор
         data: {
-          search: '',
           history: ''
         },
         //Объект экземпляра Vue.js, содержащий функции, описывающие поведение (как отклик на возбуждаемое событие)
         methods: {
           executeSearch: function() {
-            this.history += 'Нажатие кнопки "Поиск". Запрос "' + this.search + '".\n'
+            this.history += 'Нажатие кнопки "Поиск".\n'
           },
           parentClick: function() {
             this.history += 'Нажатие элемента - непосредственного предка кнопки "Поиск".\n'
           },
           grandparentClick: function() {
             this.history += 'Нажатие предка второго уровня кнопки "Поиск".\n'
+          },
+          clearHistory: function() {
+            this.history = ''
           }
         }
       })
     }
   </script>
-  <style>
-    form p+div {
+  <style type="text/css">
+    .parent, .grandparent {
       padding: 20px;
       border: 2px solid #ccbfbf
     }
@@ -40,19 +42,15 @@
     <br />
     <div id="app">
       <form class="form-horizontal">
-        <p>Пример, показывающий действие модификатора <code>stop</code>.</p>
-        <div v-on:click="grandparentClick">
-          <!-- Добавление модификатора stop для элемента-предка -->
-          <!-- <div class="input-group" v-on:click.stop="parentClick"> -->
-          <div class="input-group" v-on:click="parentClick">
-            <input v-model="search" type="text" class="form-control" />
-            <!-- Аналог метода stopPropagation в JS -->
-            <button v-on:click.stop="executeSearch" type="button" class="btn btn-primary">Поиск</button>
+        <p>Пример, показывающий использование нескольких модификаторов одновременно.</p>
+        <div v-on:click="grandparentClick" class="grandparent">
+          <div class="form-group parent" v-on:click.stop.self="parentClick">
+            <button v-on:click="executeSearch" type="button" class="btn btn-primary">Поиск</button>
           </div>
         </div>
         <br />
         <div class="form-group">
-          <label for="logTextarea">Журнал событий</label>
+          <label for="logTextarea">Журнал событий (<a href="#" v-on:click="clearHistory">Очистить</a>)</label>
           <textarea class="form-control" v-model="history" rows="20"></textarea>
         </div>
       </form>
