--- a/e2/s3/11_all_modifiers.html
+++ b/e2/s3/11_all_modifiers.html
@@ -10,21 +10,73 @@
       const sample = new Vue({
         el: '#app', //Привязка через CSS-селектор
         data: {
-          history: ''
+          preventHistory: '',
+          captureHistory: '',
+          stopHistory: '',
+          selfHistory: '',
+          onceHistory: ''
         },
         //Объект экземпляра Vue.js, содержащий функции, описывающие поведение (как отклик на возбуждаемое событие)
         methods: {
-          executeSearch: function() {
-            this.history += 'Нажатие кнопки "Поиск".\n'
+          preventExecuteSearch: function() {
+            this.preventHistory += 'Нажатие кнопки "Поиск".\n'
           },
-          parentClick: function() {
-            this.history += 'Нажатие элемента - непосредственного предка кнопки "Поиск".\n'
+          preventParentClick: function() {
+            this.preventHistory += 'Нажатие элемента - непосредственного предка кнопки "Поиск".\n'
           },
-          grandparentClick: function() {
-            this.history += 'Нажатие предка второго уровня кнопки "Поиск".\n'
+          preventGrandparentClick: function() {
+            this.preventHistory += 'Нажатие предка второго уровня кнопки "Поиск".\n'
           },
-          clearHistory: function() {
-            this.history = ''
+          clearPreventHistory: function() {
+            this.preventHistory = ''
+          },
+          captureExecuteSearch: function() {
+            this.captureHistory += 'Нажатие кнопки "Поиск".\n'
+          },
+          captureParentClick: function() {
+            this.captureHistory += 'Нажатие элемента - непосредственного предка кнопки "Поиск".\n'
+          },
+          captureGrandparentClick: function() {
+            this.captureHistory += 'Нажатие предка второго уровня кнопки "Поиск".\n'
+          },
+          clearCaptureHistory: function() {
+            this.captureHistory = ''
+          },
+          stopExecuteSearch: function() {
+            this.stopHistory += 'Нажатие кнопки "Поиск".\n'
+          },
+          stopParentClick: function() {
+            this.stopHistory += 'Нажатие элемента - непосредственного предка кнопки "Поиск".\n'
+          },
+          stopGrandparentClick: function() {
+            this.stopHistory += 'Нажатие предка второго уровня кнопки "Поиск".\n'
+          },
+          clearStopHistory: function() {
+            this.stopHistory = ''
+          },
+          selfExecuteSearch: function() {
+            this.selfHistory += 'Нажатие кнопки "Поиск".\n'
+          },
+          selfParentClick: function() {
+            this.selfHistory += 'Нажатие элемента - непосредственного предка кнопки "Поиск".\n'
+          },
+          selfGrandparentClick: function() {
+            this.selfHistory += 'Нажатие предка второго уровня кнопки "Поиск".\n'
+          },
+          clearSelfHistory: function() {
+            this.selfHistory = ''
+          },
+          onceExecuteSearch: function() {
+            this.onceHistory += 'Нажатие кнопки "Поиск".\n'
+          },
+          onceParentClick: function() {
+            this.onceHistory += 'Нажатие элемента - непосредственного предка кнопки "Поиск".\n'
+          },
+          onceGrandparentClick: function() {
+            this.onceHistory += 'Нажатие предка второго уровня кнопки "Поиск".\n'
+          },
+          clearOnceHistory: function() {
+            this.onceHistory = ''
           }
         }
       })
@@ -39,19 +91,83 @@
 </head>
 <body>
   <div class="container">
-    <br />
     <div id="app">
       <form class="form-horizontal">
-        <p>Пример, показывающий использование нескольких модификаторов одновременно.</p>
-        <div v-on:click="grandparentClick" class="grandparent">
-          <div class="form-group parent" v-on:click.stop.self="parentClick">
-            <button v-on:click="executeSearch" type="button" class="btn btn-primary">Поиск</button>
+        <p>Пример, показывающий использование набора различных модификаторов событий.</p>
+        <div class="row text-center">
+          <div class="col-xs-12 offset-lg-1 col-lg-2">
+            <strong>Стадия перехвата (погружения) capture</strong>
+            <div v-on:click.capture="captureGrandparentClick" class="grandparent">
+              <div v-on:click.capture="captureParentClick" class="form-group parent">
+                <button v-on:click.capture="captureExecuteSearch" type="button" class="btn btn-primary">Поиск</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-lg-2">
+            <strong>Отмена действия браузера prevent</strong>
+            <div v-on:click="preventGrandparentClick" class="grandparent">
+              <div v-on:click.prevent="preventParentClick" class="form-group parent">
+                <button v-on:click="preventExecuteSearch" type="button" class="btn btn-primary">Поиск</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-lg-2">
+            <strong>Прекращение всплытия stop</strong>
+            <div v-on:click.stop="stopGrandparentClick" class="grandparent">
+              <div v-on:click.stop="stopParentClick" class="form-group parent">
+                <button v-on:click.stop="stopExecuteSearch" type="button" class="btn btn-primary">Поиск</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-lg-2">
+            <strong>Событие непосредственно на данном элементе self</strong>
+            <div v-on:click.self="selfGrandparentClick" class="grandparent">
+              <div v-on:click="selfParentClick" class="form-group parent">
+                <button v-on:click.self="selfExecuteSearch" type="button" class="btn btn-primary">Поиск</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-lg-2">
+            <strong>Запуск события только один раз once</strong>
+            <div v-on:click.once="onceGrandparentClick" class="grandparent">
+              <div v-on:click.once="onceParentClick" class="form-group parent">
+                <button v-on:click.once="onceExecuteSearch" type="button" class="btn btn-primary">Поиск</button>
+              </div>
+            </div>
           </div>
         </div>
         <br />
-        <div class="form-group">
-          <label for="logTextarea">Журнал событий (<a href="#" v-on:click="clearHistory">Очистить</a>)</label>
-          <textarea class="form-control" v-model="history" rows="20"></textarea>
+        <div class="row">
+          <div class="col-xs-12 offset-lg-1 col-lg-2">
+            <div class="form-group">
+              <label for="logTextarea">Журнал событий (<a href="#" v-on:click="clearCaptureHistory">Очистить</a>)</label>
+              <textarea class="form-control" v-model="captureHistory" rows="8"></textarea>
+            </div>
+          </div>
+          <div class="col-xs-12 col-lg-2">
+            <div class="form-group">
+              <label for="logTextarea">Журнал событий (<a href="#" v-on:click="clearPreventHistory">Очистить</a>)</label>
+              <textarea class="form-control" v-model="preventHistory" rows="8"></textarea>
+            </div>
+          </div>
+          <div class="col-xs-12 col-lg-2">
+            <div class="form-group">
+              <label for="logTextarea">Журнал событий (<a href="#" v-on:click="clearStopHistory">Очистить</a>)</label>
+              <textarea class="form-control" v-model="stopHistory" rows="8"></textarea>
+            </div>
+          </div>
+          <div class="col-xs-12 col-lg-2">
+            <div class="form-group">
+              <label for="logTextarea">Журнал событий (<a href="#" v-on:click="clearSelfHistory">Очистить</a>)</label>
+              <textarea class="form-control" v-model="selfHistory" rows="8"></textarea>
+            </div>
+          </div>
+          <div class="col-xs-12 col-lg-2">
+            <div class="form-group">
+              <label for="logTextarea">Журнал событий (<a href="#" v-on:click="clearOnceHistory">Очистить</a>)</label>
+              <textarea class="form-control" v-model="onceHistory" rows="8"></textarea>
+            </div>
+          </div>
         </div>
       </form>
     </div>
