--- a/e2/s3/15_mouse_event_left.html
+++ b/e2/s3/15_mouse_event_left.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Нажатие левой клавиши мыши left mousedown</title>
+  <title>Нажатие на левую клавишу мыши (без отпускания) left mousedown</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <link href="../bootstrap-4.4.1-dist/css/bootstrap.min.css" rel="stylesheet" />
   <script src="../vue.js"></script>
@@ -48,7 +48,7 @@
           <!-- Используем событие onmousedown для отображения ответа на нажатие элемента div -->
           <!-- Добавляем модификатор left на событие, который запускает функцию blockClick. -->
           <div class="block text-center" v-on:mousedown.left="blockClick">
-            Щёлкните левой кнопкой мыши внутри данного блока
+            Нажмите на левую клавишу мыши (без отпускания) внутри данного блока
           </div>
         </div>
         <br />
