Right contextmenu. All mouse. Example 2-3 events in Vue.js. Lesson 2 Vue.js form binding. The v-cloak directive. Example 3-1 object rendering. Lesson 3 conditional rendering.

--- a/e2/s3/19_right_contextmenu.html
+++ b/e2/s3/19_right_contextmenu.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Нажатие на правую клавишу мыши (без отпускания) right mousedown</title>
+  <title>Щелчок по правой клавише мыши. Отмена действия по умолчанию right context</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <link href="../bootstrap-4.4.1-dist/css/bootstrap.min.css" rel="stylesheet" />
   <script src="../vue.js"></script>
@@ -10,9 +10,14 @@
       const sample = new Vue({
         el: '#app', //Привязка через CSS-селектор
         data: {
-          history: ''
+          search: '',
+          history: '',
+          showContext: false,
+          top: '0px',
+          left: '0px'
         },
         methods: {
+          // Функция, определяющая положение контекстного меню при нажатии на клавишу
           blockClick: function(e) {
             this.history += 'Была нажата клавиша мыши!\n'
             let button = 'Неизвестно'
@@ -22,11 +27,26 @@
               button = 'Средняя'
             } else if (e.button === 2) {
               button = 'Правая'
+              this.showContext = true
+              this.top = e.y + 'px'
+              this.left = e.x + 'px'
+              console.log(e)
             }
             this.history += button + ' кнопка была нажата.\n---\n\n'
           },
           clearHistory: function() {
             this.history = ''
+          },
+          closeContext: function() {
+            this.showContext = false
+          },
+          copyClick: function() {
+            alert('Скопируйте текст')
+            this.closeContext()
+          },
+          pasteClick: function() {
+            alert('Вставьте текст')
+            this.closeContext()
           }
         }
       })
@@ -37,26 +57,37 @@
       border: 2px solid #808080;
       padding: 10px;
     }
+    .ul {
+      position: fixed;
+      background-color: lightgray;
+      padding: 1rem;
+    }
   </style>
 </head>
 <body>
   <div class="container">
-    <br />
     <div id="app">
       <form>
-        <p>Пример, показывающий использование модификатора <code>right</code> на событии <code>onmousedown</code>.</p>
+        <p>Пример, показывающий использование модификаторов <code>right</code>, <code>contextmenu</code> и <code>prevent</code>.</p>
         <div class="form-group row">
           <div class="col-6">
-            <!-- Без модификатора. Также обрабатывает событие модификатора left по умолчанию -->
-            <div class="block text-center" v-on:mousedown="blockClick">
-              Нажмите на правую клавишу мыши (без отпускания) внутри данного блока. Также обрабатывается событие нажатия на левую клавишу
+            <!-- Событие onclick с модификатором right -->
+            <div class="block text-center" v-on:click.right="blockClick">
+              Щёлкните правою клавишей мыши внутри данного блока
             </div>
           </div>
           <div class="col-6">
-            <!-- С модификатором. Срабатывает только модификатор right -->
-            <div class="block text-center" v-on:mousedown.right="blockClick">
-              Нажмите на правую клавишу мыши (без отпускания) внутри данного блока. Событие нажатия на левую клавишу не обрабатывается
+            <!-- Событие oncontextmenu с модификатором right -->
+            <!-- Событие contextmenu работает только с действиями правою клавишей мыши -->
+            <!-- В директиве v-on на событии contextmenu используем модификатор prevent. В противном случае будет вызываться действие по умолчанию -->
+            <div class="block text-center" v-on:contextmenu.prevent="blockClick">
+              Щёлкните правою клавишей мыши внутри данного блока. Действие по умолчанию отменено
             </div>
+            <!-- Директива v-if принимает булево значения -->
+            <ul v-if="showContext" v-on:blur="closeContext" class="ul list-unstyled" v-bind:style="{ top:top, left:left }">
+              <li><a href="#" v-on:click="copyClick">Копировать</a></li>
+              <li><a href="#" v-on:click="pasteClick">Вставить</a></li>
+            </ul>
           </div>
         </div>
         <br />
